Bugfix for not showing the last li in the group list

--- a/source/stylesheets/_group.scss
+++ b/source/stylesheets/_group.scss
@@ -8,7 +8,7 @@
     overflow: auto;
 
     ul:last-child {
-      margin: 0 0 150px 0;
+      margin: 0 0 225px 0;
     }
   }
 
